Fix inline wrapping in templates/issue/index.html
See #64 for more details.

--- a/apps/gitgud_web/assets/css/app.scss
+++ b/apps/gitgud_web/assets/css/app.scss
@@ -402,10 +402,9 @@ textarea.textarea {
 .issues-table {
   .issue-title {
     display: inline-flex;
-    .buttons {
-      .issue-label {
-        margin-left: .33rem;
-      }
+    flex-wrap: wrap;
+    &>:not(last-child) {
+      margin-right: .33rem;
     }
   }
 }
